totally contrast fixes

--- a/front-end/src/components/Card/Card.css
+++ b/front-end/src/components/Card/Card.css
@@ -3,7 +3,7 @@
   flex: 1;
   height: 9rem;
   border-radius: 0.7rem;
-  color: white;
+  color: rgb(44, 44, 44);
   padding: 1rem;
   position: relative;
   cursor: pointer;
@@ -25,9 +25,9 @@
   overflow: visible;
 }
 .CircularProgressbar-path {
-  stroke: white !important;
+  stroke: rgb(255, 255, 255) !important;
   stroke-width: 12px !important;
-  filter: drop-shadow(2px 4px 6px white);
+  filter: drop-shadow(2px 4px 6px rgb(73, 72, 72));
 }
 .CircularProgressbar-trail {
   display: none;
@@ -76,7 +76,7 @@
   color: white;
   font-size: 26px;
   font-weight: bold;
-  text-shadow: 0px 0px 15px white;
+  text-shadow: 0px 0px 15px rgb(34, 33, 33);
 }
 .ExpandedCard > span:nth-of-type(2) {
   color: rgb(236, 236, 236);
