--- a/front-end/src/components/MainDash/MainDash.css
+++ b/front-end/src/components/MainDash/MainDash.css
@@ -1,20 +1,19 @@
-.MainDash{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    overflow: auto;
+.MainDash {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  overflow: auto;
 }
 
 @media screen and (max-width: 1200px) {
-    .MainDash{
-        justify-content:flex-start;
-        margin-top: 2rem;
-    }
+  .MainDash {
+    justify-content: flex-start;
+    margin-top: 2rem;
+  }
 }
 
-@media screen and (max-width: 768px)
-{
-    .MainDash{
-        align-items: center;
-    }
+@media screen and (max-width: 768px) {
+  .MainDash {
+    align-items: center;
+  }
 }
